--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,8 @@
     <div data-home-target="output"></div>
   </div>
 
-  <ul>
-    <li><%= link_to '> Rooms', rooms_path, class: "my-5 py-3 block font-medium" %></li>
+  <ul class="my-5 font-medium">
+    <li><%= link_to '> Rooms', rooms_path, class: "py-3 block" %></li>
+    <li><%= link_to '> Posts', posts_path, class: "py-3 block" %></li>
   </ul>
 </div>
