--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -2,12 +2,19 @@
   .mx-auto
     - if notice.present?
       %p#notice.py-2.px-3.bg-green-50.mb-5.text-green-500.font-medium.rounded-lg.inline-block= notice
+
     = turbo_stream_from @room
+
     = turbo_frame_tag "room" do
       = render @room
+
       = link_to 'Edit this room', edit_room_path(@room), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium"
       .inline-block.ml-2
+        -# = button_to 'Destroy this room', room_path(@room), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium"
       = link_to 'Back to rooms', rooms_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium", "data-turbo-frame": "_top"
+
     #messages.my-5
       = render @room.messages
+
+    -# = link_to 'New message', new_room_message_path(@room), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium"
     = turbo_frame_tag "new_message", src: new_room_message_path(@room), target: "_top"
