fix room editing

--- a/app/views/rooms/edit.html.haml
+++ b/app/views/rooms/edit.html.haml
@@ -1,6 +1,9 @@
 = turbo_frame_tag "room" do
   .mx-auto.w-full{:class => "md:w-2/3"}
     %h1.font-bold.text-4xl Editing room
+
     = render "form", room: @room
+
+    -# FIXME: showリンクがちゃんと動かない
     = link_to "Show this room", @room, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium"
     = link_to "Back to rooms", rooms_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium", "data-turbo-frame": "_top"
