--- a/app/views/rooms/index.html.haml
+++ b/app/views/rooms/index.html.haml
@@ -3,6 +3,14 @@
     %p#notice.py-2.px-3.bg-green-50.mb-5.text-green-500.font-medium.rounded-lg.inline-block= notice
   .flex.justify-between.items-center
     %h1.font-bold.text-4xl Rooms
-    = link_to 'New room', new_room_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium"
+    = link_to "New room", new_room_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium"
   #rooms.min-w-full
-    = render @rooms
+    -# = render @rooms
+    - @rooms.each do |room|
+      %div{:id => "#{dom_id room}"}
+        %p.my-5
+          %strong.block.font-medium.mb-1 Name:
+          = room.name
+        = link_to "Show this room", room, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium"
+        = link_to 'Edit this room', edit_room_path(room), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium"
+        %hr.mt-6/
