--- a/app/views/rooms/_room.html.haml
+++ b/app/views/rooms/_room.html.haml
@@ -2,7 +2,8 @@
   %p.my-5
     %strong.block.font-medium.mb-1 Name:
     = room.name
-  - if action_name != "show"
-    = link_to "Show this room", room, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium"
-    = link_to 'Edit this room', edit_room_path(room), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium"
-    %hr.mt-6/
+
+  -# - if action_name != "show"
+  -#   = link_to "Show this room", room, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium"
+  -#   = link_to 'Edit this room', edit_room_path(room), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium"
+  -#   %hr.mt-6/
