--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -1,7 +1,9 @@
 %h1 New Message
+
 = turbo_frame_tag "new_message", target: "_top" do
-  = form_with(model: [@message.room, @message], data: { controller: "reset_form", action: "turbo:submit-end->reset_form#reset" }) do |form|
+  = form_with(model: [@message.room, @message], data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" }) do |form|
     .field
       = form.text_field :content
       = form.submit "Send", class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium"
+
 = link_to 'Back', @message.room
